--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "mileschou/composer-template",
-    "description": "The template for create Composer project",
+    "name": "mileschou/laratelemetry",
+    "description": "OpenTelemetry with Laravel.",
     "type": "library",
     "license": "MIT",
     "keywords": [
-        "template"
+        "laravel"
     ],
     "authors": [
         {
@@ -17,12 +17,12 @@
         "php": "^8.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6 | ^10",
+        "phpunit/phpunit": "^10",
         "squizlabs/php_codesniffer": "^3.7"
     },
     "autoload": {
         "psr-4": {
-            "MilesChou\\Template\\": "src"
+            "MilesChou\\LaraTelemetry\\": "src"
         }
     },
     "autoload-dev": {
