--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         "php": "^8.1"
     },
     "require-dev": {
+        "open-telemetry/api": "^0.0.17",
+        "orchestra/testbench": "^8.5",
         "phpunit/phpunit": "^10",
         "squizlabs/php_codesniffer": "^3.7"
     },
